--- a/app/src/main/res/values-es/spanish.xml
+++ b/app/src/main/res/values-es/spanish.xml
@@ -1,7 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+<!--    Main activity   -->
     <string name="username">Usuario</string>
     <string name="password">Contraseña</string>
     <string name="sign_in">Iniciar sesión</string>
     <string name="register_placeholder">Si no tienes cuenta registrate aquí</string>
+<!--    Register activity-->
+    <string name="register">Registro</string>
+    <string name="name">Name</string>
+    <string name="surname">Surname</string>
+    <string name="birthday">Birthday</string>
+    <string name="confirm_password">Confirm password</string>
+    <string name="error_field_empty">No puede haber campos vacíos</string>
+    <string name="error_password">Las contraseñas deben ser iguales</string>
+    <string name="user_create">Usuario con nombre %s creado con éxito.</string>
 </resources>
