--- a/app/src/main/res/layout/activity_publications.xml
+++ b/app/src/main/res/layout/activity_publications.xml
@@ -6,4 +6,18 @@
     android:layout_height="match_parent"
     tools:context=".PublicationsActivity">
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/publication_recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:listitem="@layout/list_item" />
 </androidx.constraintlayout.widget.ConstraintLayout>
