--- a/app/src/main/res/menu/actionbar.xml
+++ b/app/src/main/res/menu/actionbar.xml
@@ -3,13 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/menu_button"
-        android:icon="@android:drawable/ic_menu_sort_by_size"
-        app:showAsAction="always"
-        android:title="TODO" />
-    <item
         android:id="@+id/add_publication_button"
         android:icon="@android:drawable/ic_menu_add"
-        app:showAsAction="always"
-        android:title="TODO" />
+        android:title="TODO"
+        app:showAsAction="always" />
 </menu>
