--- a/app/src/main/res/values-es/spanish.xml
+++ b/app/src/main/res/values-es/spanish.xml
@@ -19,9 +19,11 @@
     <string name="confirm_password">Confirm password</string>
     <string name="user_create">Usuario con nombre %s creado con éxito.</string>
     <!--    Publications activity   -->
-    <string name="card_price">PRECIO TOTAL: %f €</string>
-    <string name="card_punctuation">PUNTUACIÓN TOTAL: %f / 5</string>
+    <string name="card_price">PRECIO TOTAL: %s €</string>
+    <string name="card_punctuation">PUNTUACIÓN TOTAL: %s / 5</string>
     <!--    Add publication -->
+    <string name="add_publication_total_price">PRECIO TOTAL: %s €</string>
+    <string name="add_publication_total_punctuation">PUNTUACIÓN TOTAL: %s / 5</string>
     <string name="add_publication_establishment_punctuation">Puntuación del lugar</string>
     <string name="add_product">Añadir producto</string>
     <string name="add_publication">Añadir publicación</string>
