--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/card_products"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -12,6 +12,8 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -42,6 +44,7 @@
                     android:layout_width="476dp"
                     android:layout_height="207dp"
                     android:layout_weight="1"
+                    android:paddingRight="10dp"
                     tools:srcCompat="@tools:sample/avatars" />
 
                 <TextView
@@ -63,34 +66,19 @@
                     android:id="@+id/card_price"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="2"
+                    android:layout_weight="3"
                     android:text="@string/card_price"
                     android:textSize="16sp" />
 
-                <LinearLayout
+                <TextView
+                    android:id="@+id/card_punctuation"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/card_punctuation"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginRight="10dp"
-                        android:layout_weight="1"
-                        android:text="@string/card_punctuation"
-                        android:textAlignment="viewEnd"
-                        android:textSize="16sp" />
-
-                    <ImageView
-                        android:id="@+id/imageView"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        app:srcCompat="@android:drawable/btn_star_big_on"
-                        tools:ignore="ImageContrastCheck" />
-                </LinearLayout>
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="10dp"
+                    android:layout_weight="2"
+                    android:text="@string/card_punctuation"
+                    android:textAlignment="textStart"
+                    android:textSize="16sp" />
 
             </LinearLayout>
         </LinearLayout>
