--- a/app/src/main/res/values-es/spanish.xml
+++ b/app/src/main/res/values-es/spanish.xml
@@ -20,17 +20,18 @@
     <string name="user_create">Usuario con nombre %s creado con éxito.</string>
     <!--    Publications activity   -->
     <string name="card_price">PRECIO TOTAL: %s €</string>
-    <string name="card_punctuation">PUNTUACIÓN TOTAL: %s / 5</string>
+    <string name="card_punctuation">PUNTUACIÓN TOTAL: %s / 5 ★</string>
     <!--    Add publication -->
     <string name="add_publication_total_price">PRECIO TOTAL: %s €</string>
-    <string name="add_publication_total_punctuation">PUNTUACIÓN TOTAL: %s / 5</string>
+    <string name="add_publication_total_punctuation">PUNTUACIÓN TOTAL: %s / 5 ★</string>
     <string name="add_publication_establishment_punctuation">Puntuación del lugar</string>
+    <string name="add_publication_establishment_punctuation_print">%s / 5 ★</string>
     <string name="add_product">Añadir producto</string>
     <string name="add_publication">Añadir publicación</string>
     <string name="submit">Guardar</string>
     <string name="add_publication_establishment_name">Nombre del establecimiento</string>
     <string name="publication_created">Publicación creada</string>
-    <string name="add_publication_add_image">Añadir imagen</string>cunba
+    <string name="add_publication_add_image">Añadir imagen</string>
     <!--    Add product     -->
     <string name="add_product_name">Nombre</string>
     <string name="add_product_price">Precio</string>
