--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -48,7 +48,7 @@
 
                 <ImageView
                     android:id="@+id/card_image"
-                    android:layout_width="476dp"
+                    android:layout_width="320dp"
                     android:layout_height="207dp"
                     android:layout_weight="1"
                     android:paddingRight="10dp"
@@ -59,6 +59,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
+                    android:paddingLeft="10dp"
                     android:text="TextView" />
 
             </LinearLayout>
