--- a/app/src/main/res/layout/activity_add_publication.xml
+++ b/app/src/main/res/layout/activity_add_publication.xml
@@ -16,6 +16,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginEnd="70dp"
         android:layout_marginBottom="10dp"
+        android:descendantFocusability="blocksDescendants"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
